# HyperGraph_Raptor

./: .gitignore  README.md  app.py  parallelism.md  prompt_config.json  pyproject.toml  requirements.txt  run_make_new_hypergraph.py
GraphReasoning/: __init__.py  graph_generation.py  hypergraph_store.py  hypergraph_viz.py  llm_client.py  prompt_config.py  raptor_export.py  raptor_tree.py
artifacts/sg/Old/: 0_20230515_Migros_Online_Technische Spezifikation.html  0_Cars Movie Hard.html  1_Cars Movie.html  2_Movie 2.html
artifacts/sg/graphs/: 0_20230515_Migros_Online_Technische Spezifikation.json  0_20230515_Migros_Online_Technische Spezifikation_chunks_clean.csv  0_Cars Movie Hard.json  (+12 more)
raptor_output/20230515_Migros_Online_Technische Spezifikation/: raptor_as_hypergraph.json  raptor_as_hypergraph_viz.html  raptor_dag.json  raptor_embeddings.npz  raptor_nodes.json  raptor_tree.json  raptor_viz.html
raptor_output/Automate the Boring Stuff with Python/: raptor_as_hypergraph.json  raptor_as_hypergraph_viz.html  raptor_dag.json  raptor_embeddings.npz  raptor_nodes.json  raptor_tree.json  raptor_viz.html
raptor_output/Space-Jam-1996/: raptor_as_hypergraph.json  raptor_as_hypergraph_viz.html  raptor_dag.json  raptor_embeddings.npz  raptor_nodes.json  raptor_tree.json  raptor_viz.html
raptor_output/shrek-script-pdf/: raptor_as_hypergraph.json  raptor_as_hypergraph_viz.html  raptor_dag.json  raptor_embeddings.npz  raptor_nodes.json  raptor_tree.json  raptor_viz.html
scripts/: pdf2markdown.py  run_hypergraph_to_viz.py  run_make_new_hypergraph.py  run_raptor_build.py
(+3 files in other folders)
